# slop-scraper

./: .gitignore  CONSOLE-LOG-DEBUG.txt  README.md  SCRAPER-README.md  SECURITY.md  SecurityAudit.MD  appdetails_cache.json  backfill_tracking.json  pyproject.toml  rescan_progress.json
slop_scraper/: TESTING.md  __init__.py  backfill.py  fix.py  fix_dates.py  main.py  rescan_progress.json
slop_scraper/core/: __init__.py  scraper.py
slop_scraper/database/: __init__.py  supabase.py
slop_scraper/debug/: backfill.py
slop_scraper/scrapers/: __init__.py  game_specific.py  pcgamingwiki.py  protondb.py  reddit_wiki.py  steamcommunity.py  steampowered.py
slop_scraper/utils/: __init__.py  dates.py  extract_engine.py  results_utils.py  security_config.py
slop_scraper/validation/: __init__.py  config.py  debug_config.py  options_validator.py
